--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -39,14 +39,22 @@
         <article class="card p-2 comments shadow mt-2">
             <h5 class="text-muted">Comments</h5>
             {% if page.enable_comments and not comments_disabled_globally_flag or user.is_superuser %}
-                {% get_xtdcomment_count as comment_count for pages.page %}
+                {% if not comments_use_old_system %}
+                    {% get_xtdcomment_count as comment_count for pages.page %}
+                {% else %}
+                    {% get_comment_count for page as comment_count %}
+                {% endif %}
 
                 {% render_comment_form for page %}
                 <hr />
 
                 <p class="text-muted text-small">This page has {{ comment_count }} comment{{ comment_count|pluralize:'s' }}.</p>
 
-                {% render_xtdcomment_tree for page allow_flagging allow_feedback show_feedback %}
+                {% if not comments_use_old_system %}
+                    {% render_xtdcomment_tree for page allow_flagging allow_feedback show_feedback %}
+                {% else %}
+                    {% render_comment_list for page %}
+                {% endif %}
             {% elif page.enable_comments and comments_disabled_globally_flag %}
                 <p class="text-muted text-small">Comments were disabled globally.</p>
             {% else %}
