--- a/khoBlog/templates/comments/form.html
+++ b/khoBlog/templates/comments/form.html
@@ -1,6 +1,6 @@
 {% load i18n comments project_tags widget_tweaks %}
-{% comment %}
-{% if user.is_authenticated %} {% endcomment %}
+
+{% if user.is_authenticated %}
     <div class="card formcard">
         <div class="card-body">
             {% if not comments_use_old_system %}
@@ -8,10 +8,9 @@
             {% else %}
                 <form action="{% comment_form_target %}" method="post" novalidate>
             {% endif %}
-                {% form form %}
-                {% comment %} {% csrf_token %} {% endcomment %}
+                {% csrf_token %}
 
-                {% comment %} <div class="non-field-errors">
+                <div class="non-field-errors">
                     {{ form.non_field_errors }}
                 </div>
 
@@ -40,16 +39,6 @@
 
                 <div class="field mb-2">
                     <div class="form-floating">
-                        {{ form.name|add_class:"form-control"|attr:"placeholder:" }}
-                        {{ form.name.label_tag }}
-                    </div>
-                </div>
-                {% for error in form.name.errors %}
-                    <small class="form-text text-danger">{{ error }}</small>
-                {% endfor %}
-
-                <div class="field mb-2">
-                    <div class="form-floating">
                         {{ form.comment|add_class:"form-control"|attr:"placeholder:" }}
                         {{ form.comment.label_tag }}
                     </div>
@@ -67,7 +56,7 @@
                 </div>
                 {% for error in form.alias_user.errors %}
                     <small class="form-text text-danger">{{ error }}</small>
-                {% endfor %} {% endcomment %}
+                {% endfor %}
 
                 {% if not comments_use_old_system %}
                     <input type="hidden" name="next" value="{% url 'comments-xtd-sent' %}" />
@@ -78,7 +67,6 @@
             </form>
         </div>
     </div>
-{% comment %}
 {% else %}
     <p>Please <a href="{% url 'account_login' %}">Log in</a> to leave a comment.</p>
-{% endif %} {% endcomment %}
+{% endif %}
