--- a/khoBlog/templates/django_comments_xtd/comment_tree.html
+++ b/khoBlog/templates/django_comments_xtd/comment_tree.html
@@ -31,10 +31,11 @@
                             {{ item.comment.user }}
                         {% endif %}
                     {% endif %}
+                    {% if item.comment.user and item.comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary">Moderator</span>{% endif %}
                 </h4>
                 <h6 class="text-small d-flex">
                     {% spaceless %}
-                        <div class="me-auto">{{ item.comment.submit_date|date:'l, d F Y' }}&nbsp;-&nbsp;{% if item.comment.url and not item.comment.is_removed %}<a href="{{ item.comment.url }}" target="_new">{% endif %}{{ item.comment.name }}{% if item.comment.url %}</a>{% endif %}{% if item.comment.user and item.comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary">Moderator</span>{% endif %}&nbsp;&nbsp;<a href="{% get_comment_permalink item.comment %}"><i class="bi bi-link-45deg"></i> Permalink</a></div>
+                        <div class="me-auto">{{ item.comment.submit_date|date:'l, d F Y' }}&nbsp;<a href="{% get_comment_permalink item.comment %}"><i class="bi bi-link-45deg"></i> Permalink</a></div>
                     {% endspaceless %}
                     <span>
                         {% if not item.comment.is_removed %}
@@ -62,6 +63,10 @@
                     <p class="text-muted{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}"><em>{% trans "This comment has been removed." %}</em></p>
                 {% else %}
                     <div class="content{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
+                        {% if item.comment.title %}
+                            <h4>{{ item.comment.title }}</h4>
+                        {% endif %}
+
                         {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
                     </div>
                     {% if allow_feedback %}
