--- a/khoBlog/templates/comments/flag.html
+++ b/khoBlog/templates/comments/flag.html
@@ -1,23 +1,40 @@
-{% extends 'sub_base_main.html' %}
-{% load widget_tweaks project_tags %}
+{% extends 'blog/comments/base_comments.html' %}
+{% load comments comments_xtd %}
 
-{% block title %}
-    Flag Comment
-{% endblock title %}
+{% block title %}Flag Comment{% endblock title %}
 
-{% block page_top_title %}
-    Flag Comment
-{% endblock page_top_title %}
+{% block page_top_title %}Flag Comment{% endblock page_top_title %}
 
-{% block main %}
-    <h3>Flag: {{ comment.comment }}</h3>
-    <form method="POST" class="form">
-        <h4>Are you sure ?</h4>
+{% block comments_main %}
+    <div class="mb-2">
+        <h3>
+            Flag this comment ?
+        </h3>
+        {% include 'django_comments_xtd/comment.html' %}
 
-        {% form form %}
+        {% with object_absolute_url=comment.content_object.get_absolute_url %}
+            {% if object_absolute_url %}
+                <p>
+                    Posted to&nbsp;<a href="{{ object_absolute_url }}">{{ comment.content_object }}</a>
+                </p>
+            {% endif %}
+        {% endwith %}
+    </div>
 
-        <input type="hidden" name="next" value="{{ comment.get_absolute_url }}" />
-        <button type="submit" class="btn btn-primary mt-2">Flag Comment</button>
-    </form>
+    <div class="card mt-2">
+        <div class="card-body">
+            <div class="lead">
+                Click on the "Flag" button to mark the following comment as inappropriate.
+            </div>
 
-{% endblock main %}
+            <form action="." method="post" class="form-horizontal">
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ comment.get_absolute_url }}" />
+                <div class="form-group">
+                    <input type="submit" name="submit" class="btn btn-danger" value="Flag" />
+                    <a class="btn btn-secondary" href="{{ comment.get_absolute_url }}">Cancel</a>
+                </div>
+            </form>
+        </div>
+    </div>
+{% endblock comments_main %}
