django_markup instead or django-markdown2

--- a/khoBlog/templates/includes/django_comments_xtd/comment_content.html
+++ b/khoBlog/templates/includes/django_comments_xtd/comment_content.html
@@ -1,3 +1,2 @@
-{% load md2 %}
-
-{{ content|markdown:"safe, code-friendly, code-color" }}
+{% load markup_tags %}
+{{ content|apply_markup:"markdown"|apply_markup:"widont" }}
