--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -3,6 +3,7 @@
 
 {% block additional_js %}
     <script src="{% static 'vendor\node_modules\jquery\dist\jquery.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@editorjs/embed@2.4.6/dist/bundle.min.js"></script>
 {% endblock additional_js %}
 
 {% block additional_css %}
@@ -14,7 +15,7 @@
         <div class="card-body">
             <form enctype="multipart/form-data" method="post" novalidate>
                 {% csrf_token %}
-                <div class="non-field-errors">
+                {% comment %} <div class="non-field-errors">
                     {{ form.non_field_errors }}
                 </div>
 
@@ -232,7 +233,9 @@
                     {% for error in form.language.errors %}
                         <small class="form-text text-danger">{{ error }}</small>
                     {% endfor %}
-                </div>
+                </div> {% endcomment %}
+
+                {% form form %}
 
                 <button type="submit" class="btn btn-primary">{{ title }}</button>
             </form>
