--- a/khoBlog/static/khoBlog/css/_utils.scss
+++ b/khoBlog/static/khoBlog/css/_utils.scss
@@ -44,6 +44,11 @@
     color: $white;
 }
 
+// Text inherit
+.active .text-inherit {
+    color: inherit !important;
+}
+
 // Black text
 .text-black {
     color: $black;
