--- a/khoBlog/templates/sub_base.html
+++ b/khoBlog/templates/sub_base.html
@@ -11,7 +11,7 @@
 
 {% block aside %}
 
-    {% if filter %}
+    {% if filter_form %}
         <div class="card p-4 mb-2 rounded shadow">
             <form class="card formcard" method="get">
                 <h4 class="fst-italic">Filters</h4>
@@ -19,7 +19,7 @@
                     {{ form.non_field_errors }}
                 </div>
 
-                {% form_get filter.form %}
+                {% form_get filter_form.form %}
 
                 <input class="btn btn-primary" type="submit" />
             </form>
