Filter > Search, will have to fully remove that stuff

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,11 +3,11 @@
 
 {% block page_top_end %}
     <nav class="btn-group float-end" role="group" aria-label="Previous / Next">
-        <a class="btn btn-primary" href="{{ prev_post.get_absolute_url }}">
+        <a class="btn btn-primary btn-sm" href="{{ prev_post.get_absolute_url }}">
             <i class="bi bi-chevron-left"></i>
         </a>
 
-        <a class="btn btn-primary" href="{{ next_post.get_absolute_url }}">
+        <a class="btn btn-primary btn-sm" href="{{ next_post.get_absolute_url }}">
             <i class="bi bi-chevron-right"></i>
         </a>
     </nav>
