--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -3,8 +3,8 @@
 
 {% block page_top_end %}
     {% if user.is_superuser %}
-        <a class="btn btn-danger float-end" href="{% url 'admin:accounts_customuser_delete' object_id=object.id %}">
-            <i class="bi bi-trash"></i> Delete in Admin
+        <a class="btn btn-danger btn-sm float-end" href="{% url 'admin:accounts_customuser_change' object_id=object.id %}">
+            <i class="bi bi-trash"></i> Edit in Admin
         </a>
     {% endif %}
 {% endblock page_top_end %}
