--- a/khoBlog/templates/sub_base_main.html
+++ b/khoBlog/templates/sub_base_main.html
@@ -9,6 +9,25 @@
 {% endblock page_top_title %}
 
 {% block content %}
+    {% if filter_form %}
+        {% load project_tags %}
+
+        <div class="collapse" id="collapseExample">
+            <div class="card p-4 mb-2 rounded shadow">
+                <form class="card formcard" method="get">
+                    <h4 class="fst-italic">Filters</h4>
+                    <div class="text-danger">
+                        {{ form.non_field_errors }}
+                    </div>
+
+                    {% form_get filter_form.form %}
+
+                    <input class="btn btn-primary" type="submit" />
+                </form>
+            </div>
+        </div>
+    {% endif %}
+
     {% block main %}
     {% endblock main %}
 {% endblock content %}
