--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -69,9 +69,9 @@
     {% block additional_js %}{% endblock additional_js %}
     {% block additional_css %}{% endblock additional_css %}
 
-    <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap/dist/css/bootstrap.min.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap-icons/font/bootstrap-icons.css' %}" media="screen">
 
+    <script src="{% static 'vendor\node_modules\jquery\dist\jquery.min.js' %}"></script>
     <script defer src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
     <script defer src="{% static 'khoBlog/js/scripts/tooltips.js' %}"></script>
 
