--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -1,7 +1,7 @@
 {% extends 'sub_base_main_block.html' %}
 
 {% block page_top_archives %}
-    <div class="text-small text-muted d-inline-flex col">
+    <div class="text-small text-muted col">
         <span>
             <a href="{% url 'blog:post_archive' %}">Archives</a> by <a href="{% url 'blog:archive_year' year=now|date:'Y' %}">Year</a> -
             <a href="{% url 'blog:archive_month' year=now|date:'Y' month=now|date:'M' %}">Month</a> -
