--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -239,8 +239,8 @@ aside p:last-child {
 }
 
 .text-then-hr {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     border: 0;
     border-top: 1px solid;
     @include border-color('border-color');
