--- a/khoBlog/templates/sitetree/breadcrumbs_bootstrap4.html
+++ b/khoBlog/templates/sitetree/breadcrumbs_bootstrap4.html
@@ -2,15 +2,19 @@
 
 {% if sitetree_items|length == 1 %}
 {% else %}
-    <nav aria-label="breadcrumb" role="navigation">
-        <ol class="breadcrumb">
-            {% for item in sitetree_items %}
-                {% if not forloop.last %}
-                    <li class="breadcrumb-item"><a href="{% sitetree_url for item %}">{{ item.title_resolved|truncatewords_html:7 }}</a></li>
-                {% else %}
-                    <li class="breadcrumb-item active">{{ item.title_resolved|truncatewords_html:7 }}</li>
-                {% endif %}
-            {% endfor %}
-        </ol>
-    </nav>
+    <span class="text-small">
+        <strong>
+            <nav aria-label="breadcrumb" role="navigation">
+                <ol class="breadcrumb">
+                    {% for item in sitetree_items %}
+                        {% if not forloop.last %}
+                            <li class="breadcrumb-item"><a href="{% sitetree_url for item %}">{{ item.title_resolved|truncatewords_html:7 }}</a></li>
+                        {% else %}
+                            <li class="breadcrumb-item active">{{ item.title_resolved|truncatewords_html:7 }}</li>
+                        {% endif %}
+                    {% endfor %}
+                </ol>
+            </nav>
+        </strong>
+    </span>
 {% endif %}
