slashes instead of backslashes

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -72,8 +72,8 @@
     <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap-icons/font/bootstrap-icons.css' %}" media="screen">
 
     {% compress js %}
-        <script src="{% static 'vendor\node_modules\jquery\dist\jquery.min.js' %}"></script>
-        <script src="{% static 'vendor\node_modules\@editorjs\link\dist\bundle.js' %}"></script>
+        <script src="{% static 'vendor/node_modules/jquery/dist/jquery.min.js' %}"></script>
+        <script src="{% static 'vendor/node_modules/@editorjs/link/dist/bundle.js' %}"></script>
         <script defer src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
         <script defer src="{% static 'khoBlog/js/scripts/tooltips.js' %}"></script>
     {% endcompress js %}
